kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: newapp
  namespace: newapp
spec:
  containers:
  - name: newapp
    image: ghcr.io/go4clouds/newapp:v0.1.0
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: "500m"
        memory: "512Mi"
      requests:
        cpu: "250m"
        memory: "256Mi"clear
