kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newapp
spec:
  ingressClassName: nginx
  rules:
  - host: web10.go4clouds.net
    http:
      paths:
      - backend:
          service:
            name: newapp
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
